k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api-deployment
  namespace: default
  labels:
    app: devops-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-api
  template:
    metadata:
      labels:
        app: devops-api
    spec:
      containers:
        - name: devops-api-container
          # Docker Hub Repository와 빌드할 이미지 태그 정보
          image: jundevgo/infratest:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 70
            periodSeconds: 10
