k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-service
  namespace: default
  labels:
    app: devops-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: devops-api
