k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: infratest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-api-service
                port:
                  number: 80
